2003-09-08  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/boot.h: Formatting cleanups - remove extra empty lines,
	wrap or shorten line lines.

2003-08-29  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	Remove obsolete comment about version numbering.
	* doc/api/Makefile.am: Combine multiple definitions of SUFFIXES var. 

2003-08-26  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom162.h (TCCR1A): Add missing bit values.

2003-08-15  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Set version to 0.99.90.20030815.
	* NEWS: Prepare for branch.
	* doconf: Export PATH.
	Try to catch CC=gcc in env to avoid configure failure.
	* doc/api/rel-method.dox: Update branch/release instructions.
	* doc/api/tools-install.dox: Add warning about having CC=gcc causing
	configure to fail.

2003-08-15  Theodore A. Roth  <troth@openavr.org>

	* doc/api/rel-method.dox: Add note about updating NEWS file.
	* doc/api/tools-install.dox: Update program versions.
	Update avarice install notes.
	* include/avr/pgmspace.h: Add @{ @} around PRG_RDB to quell doxygen
	warning.
	Move note about constant tables in lower 64k were doxygen will see it.
	Move pgm_read_byte_far() and pgm_read_word_far() comments to be
	directly before macro definitions.

2003-08-15  Theodore A. Roth  <troth@openavr.org>

	* include/avr/pgmspace.h: Remove extraneous empty lines.

2003-08-14  Theodore A. Roth  <troth@openavr.org>

	* doc/api/rel-method.dox: Fix typo.

2003-08-14  Theodore A. Roth  <troth@openavr.org>

	* README: Discuss required versions of gcc and binutils.
	* doc/api/Makefile.am (EXTRA_DIST): Add rel-method.dox.
	(IMAGE_SRC): Add releases.fig.
	* doc/api/main_page.dox: Grammar fix.
	* doc/api/rel-method.dox: New file.
	* doc/api/releases.fig: New file.

2003-08-11  Eric B. Weddington  <eric@ecentral.com>
